--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -38,6 +39,6 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.4.11"
   }
 }
